// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AssessmentContent /> render default 1`] = `
<div>
  <div
    className="d-flex justify-content-between"
  >
    <h2
      className="mb-4"
    >
      Your response
    </h2>
  </div>
  <p>
    <strong>
      Instructions
      : 
    </strong>
    Create a response to the prompt below.
    Progress will be saved automatically and you can return to complete your
    progress at any time. After you submit your response, you cannot edit
    it.
  </p>
  <div
    key="0"
  >
    <Prompt
      prompt="<p>test</p>"
    />
    <TextResponse
      isReadOnly={true}
      submissionConfig={
        Object {
          "maxFileSize": 100,
        }
      }
      value="test"
    />
  </div>
  <FileUpload
    isReadOnly={true}
    uploadedFiles={
      Array [
        Object {
          "fileDescription": "test",
        },
      ]
    }
  />
</div>
`;

exports[`<AssessmentContent /> render no prompts 1`] = `
<div>
  <div
    className="d-flex justify-content-between"
  >
    <h2
      className="mb-4"
    >
      Your response
    </h2>
  </div>
  <p>
    <strong>
      Instructions
      : 
    </strong>
    Create a response to the prompt below.
    Progress will be saved automatically and you can return to complete your
    progress at any time. After you submit your response, you cannot edit
    it.
  </p>
  <FileUpload
    isReadOnly={true}
    uploadedFiles={
      Array [
        Object {
          "fileDescription": "test",
        },
      ]
    }
  />
</div>
`;
